Worked on paper

--- a/paper/cmt.bib
+++ b/paper/cmt.bib
@@ -78,3 +78,10 @@
   year={2014},
   publisher={APS}
 }
+
+@book{peskin,
+  title={An introduction to quantum field theory},
+  author={Peskin, Michael},
+  year={2018},
+  publisher={CRC press}
+}
