Worked more on paper. Almost done

--- a/paper/cmt.bib
+++ b/paper/cmt.bib
@@ -85,3 +85,33 @@
   year={2018},
   publisher={CRC press}
 }
+
+@article{schultz64two,
+  title = {Two-Dimensional Ising Model as a Soluble Problem of Many Fermions},
+  author = {SCHULTZ, T. D. and MATTIS, D. C. and LIEB, E. H.},
+  journal = {Rev. Mod. Phys.},
+  volume = {36},
+  issue = {3},
+  pages = {856--871},
+  numpages = {0},
+  year = {1964},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.36.856},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.36.856}
+}
+
+@article{blote02cluster,
+  title = {Cluster Monte Carlo simulation of the transverse Ising model},
+  author = {Bl\"ote, Henk W. J. and Deng, Youjin},
+  journal = {Phys. Rev. E},
+  volume = {66},
+  issue = {6},
+  pages = {066110},
+  numpages = {8},
+  year = {2002},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.66.066110},
+  url = {https://link.aps.org/doi/10.1103/PhysRevE.66.066110}
+}
