Finished draft of paper

--- a/paper/cmt.bib
+++ b/paper/cmt.bib
@@ -88,7 +88,7 @@
 
 @article{schultz64two,
   title = {Two-Dimensional Ising Model as a Soluble Problem of Many Fermions},
-  author = {SCHULTZ, T. D. and MATTIS, D. C. and LIEB, E. H.},
+  author = {Schultz, T. D. and Mattis, D. C. and Lieb, E. H.},
   journal = {Rev. Mod. Phys.},
   volume = {36},
   issue = {3},
